--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "tailwind-hamburgers": "^1.3.5",
     "vite": "^4.4.9"
   },
   "devDependencies": {
